@@ -1,9 +1,5 @@
 OldWoodArmor: 1 defense
-WizardGangsterArmor:
-	'''
-	10% reduced mana usage
-	Enemies may drop slightly more coins when killed with magic
-	'''
+WizardGangsterArmor: 10% reduced mana usage
 GourdArmor:
 	'''
 	Melee weapons may inflict decay, which damages enemies over time
